# agent-lightning

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  AGENTS.md  RAI_README.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.fast.json
.github/workflows/: backport.yml  badge-apo.yml  badge-calc-x.yml  badge-claude-code.yml  badge-examples.yml  badge-latest.yml  badge-rag.yml  badge-spider.yml  badge-unsloth.yml  benchmark.yml  dashboard.yml  docs.yml  examples-apo.yml  examples-calc-x.yml  examples-claude-code.yml  examples-compat.yml  examples-rag.yml  examples-spider.yml  examples-unsloth.yml  examples.yml  issue-comment.yml  pypi-nightly.yml  pypi-release.yml  tests-full.yml  tests.yml
agentlightning/: __init__.py  client.py  config.py  env_var.py  litagent.py  llm_proxy.py  logging.py  reward.py  runner.py  semconv.py  server.py  trainer.py  types.py
agentlightning/adapter/: __init__.py  base.py  messages.py  triplet.py
agentlightning/algorithm/: __init__.py  base.py  decorator.py  fast.py  mock.py
agentlightning/cli/: agentops_server.py  store.py  vllm.py
agentlightning/emitter/: __init__.py  annotation.py  exception.py  message.py  object.py  reward.py  utils.py
agentlightning/execution/: base.py  client_server.py  events.py  inter_process.py  shared_memory.py
agentlightning/instrumentation/: __init__.py  agentops.py  agentops_langchain.py  litellm.py  verl_chat_scheduler.py  vllm.py
agentlightning/litagent/: __init__.py  decorator.py  litagent.py
agentlightning/runner/: __init__.py  agent.py  base.py  legacy.py
agentlightning/store/: __init__.py  base.py  client_server.py  collection_based.py  memory.py  mongo.py  threading.py  utils.py
agentlightning/tracer/: __init__.py  agentops.py  base.py  http.py  otel.py  triplet.py  types.py
agentlightning/trainer/: __init__.py  legacy.py  registry.py  trainer.py
agentlightning/types/: __init__.py  core.py  resources.py  tracer.py
agentlightning/utils/: metrics.py  otel.py  otlp.py  server_launcher.py
agentlightning/verl/: __init__.py  async_server.py  daemon.py  dataset.py  entrypoint.py  trainer.py
dashboard/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.mjs
dashboard/.storybook/: main.ts
dashboard/public/: index.html
dashboard/src/: Router.tsx  types.ts
dashboard/test-utils/: python-server.py
docker/: compose.grafana.yml  compose.mongo.yml  compose.prometheus-memory-store.yml  compose.prometheus-mongo-store.yml  compose.store.yml  prometheus.memory-store.yml  prometheus.mongo-store.yml  setup.sh
docker/grafana/: dashboard-provider.yml
docs/: changelog.md  index.md
docs/algorithm-zoo/: apo.md  index.md  verl.md
docs/assets/: store-openapi.json
docs/community/: contributing.md
docs/deep-dive/: birds-eye-view.md  server-client-architecture.md  serving-llm.md  store.md  tracing.md
docs/how-to/: examples-catalog.md  train-first-agent.md  train-sql-agent.md  unsloth-sft.md  write-first-algorithm.md
docs/javascripts/: charts.js  move-source-file.js
docs/js/: favicon-theme.js
docs/macros/: source_links.py
docs/quickstart/: getting-started.md
docs/reference/: agent.md  algorithm.md  core.md  internal.md  rl.md  runner.md  store.md  trainer.md  types.md
docs/stylesheets/: extra.css
docs/tutorials/: debug.md  installation.md  parallelize.md  traces.md  write-agents.md
examples/: .gitignore  README.md
examples/apo/: README.md  apo.py  apo_client.py  apo_custom_algorithm.py  apo_custom_algorithm_trainer.py  apo_debug.py  legacy_apo_client.py  legacy_apo_server.py  room_selector.py  room_selector_apo.py
examples/azure/: README.md  aoai_finetune.py  train_capital_agent.py
examples/calc_x/: README.md  calc_agent.py  calc_agent_dev.py  calc_agent_v0_2.py  calc_agent_v0_2_dev.py  calc_agent_v0_2_llm_proxy.py  legacy_calc_agent.py  test_agentops.py  train.sh  train_calc_agent.py  train_ci.sh  train_llama.sh  train_mini.sh
examples/cc/: README.md  accelerate_config.yaml  agent_config.yaml  algorithm.py  cc_agent.py  claude_code_controller.py  collect_from_qwen3_coder_30b.sh  collect_trace.sh  custom_adapter.py  custom_callbacks.py  handle_hook.template.sh  offline_rloo.py  offline_rloo_trainer.py  parallel_trace_collection.py  requirements.txt  rollout_runner.py  settings.template.json  swe_debug.jsonl
examples/claude_code/: README.md  cc_agent.py  claude_code_agent.py  claude_code_controller.py  custom_adapter.py  extended_adapter.py
examples/minimal/: README.md  llm_proxy.py  write_metrics.py  write_traces.py
examples/rag/: README.md  metric_utils.py  rag_agent.py  rag_run_dev.py  train_rag.py  utils.py  wiki_retriever_mcp.py
examples/search_r1/: README.md  search_r1_agent.py
examples/spider/: README.md  sql_agent.py  train.sh  train_ci.sh  train_llama.sh  train_sql_agent.py
examples/tinker/: README.md  hello.py  q20_evaluate.py  q20_train.py
examples/unsloth/: README.md  math_agent.py  sft_algorithm.py  sft_allinone.py  sft_rollout_runners.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/algorithm-zoo/: index.html
latest/search/: search_index.json
scripts/: badge_aggregation.js  build_vm_image.sh  check_python_headers.py  cleanup.sh  dispatch_comment.js  litellm_ci.yaml  litellm_run.sh  litellm_sanity_check.py  restart_ray.sh  setup_latest.sh  setup_latest_gpu.sh  setup_stable.sh  setup_stable_full.sh  setup_stable_gpu.sh  setup_type_checking.sh  trigger_on_label.js  validate_example_wandb.py  verl_git_diff.sh
tests/: test_client.py  test_config.py  test_decorator_executability.py  test_env_var.py  test_litagent_hooks.py  test_llm_proxy.py  test_llm_proxy_restart.py  test_reward.py  test_tracer.py  test_tracer_http.py
tests/adapter/: test_llm_proxy.py  test_messages_adapter.py
tests/algorithm/: test_apo.py  test_baseline.py  test_decorator.py  test_mock.py
tests/assets/: prompt_caches.jsonl
tests/benchmark/: analysis.py  benchmark_store.py  micro_benchmark.py
tests/common/: prometheus_stub.py
tests/emitter/: test_annotation.py  test_exception.py  test_message.py  (+3 more)
(+115 files in other folders)
