[project]
name = "agentlightning"
version = "0.1.2"
description = "Agent Lightning is the absolute trainer to light up AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz",
  "psutil",
  "setproctitle",
  "flask",
  "agentops<=0.4.21",
  "httpdbg",
  "uvicorn",
  "fastapi",
  "aiohttp",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
  "hatch",
  "pytest-asyncio",
  "pre-commit",
  "pytest-rerunfailures",
  "black",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mike",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-git-authors-plugin",
  "mkdocs-macros-plugin",
]
experiment = [
  "random-word",
]
agent = [
  "autogen-agentchat",
  "autogen-ext[openai]",
  "litellm[proxy]",
  "mcp",
  "openai-agents",
  "langgraph",
  "langchain[openai]",
  "langchain-community",
  "langchain-text-splitters",
  "sqlparse",
  "nltk",
  "uv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentlightning"]
include = ["**/*.yaml", "**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
